# Bulletinator

./: .gitignore  README.md  pyproject.toml
backend/: auth.py  config.py  dependencies.py  email.py  email_handler.py  exceptions.py  main.py  permissions.py  pyproject.toml
backend/__tests__/: conftest.py  mock.py
backend/__tests__/accounts/: accounts_test.py  staff_test.py
backend/__tests__/auth/: auth_test.py
backend/__tests__/boards/: boards_test.py
backend/__tests__/items/: items_test.py  subitems_test.py
backend/__tests__/media/: images_test.py
backend/__tests__/reports/: reports_test.py
backend/__tests__/tiered/: tiered_test.py
backend/__tests__/users/: users_test.py
backend/assets/emails/: invitation.html  invitation.txt  password_change.html  password_change.txt  subscription-cancellation.html  subscription-cancellation.txt  subscription-failure.html  subscription-failure.txt  subscription.html  subscription.txt  update_verification.html  update_verification.txt  verification.html  verification.txt
backend/database/: accounts.py  boards.py  defaults.py  items.py  media.py  reports.py  schema.py  users.py
backend/models/: accounts.py  auth.py  boards.py  items.py  media.py  reports.py  shared.py  users.py
backend/routers/: accounts.py  auth.py  boards.py  items.py  media.py  reports.py  router.py  users.py
backend/utils/: email_handler.py  permissions.py  rate_limiter.py  stripe.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: theme.ts  types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/boards/[slug]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/utils/: board.ts  color.ts
frontend/src/components/: AccountAvatar.tsx  BoardIcon.tsx  CookieSetter.tsx
frontend/src/contexts/: auth.tsx  index.tsx
frontend/src/features/auth/login/: form.tsx  index.tsx
frontend/src/features/boards/dashboard/: creator.tsx  grid.tsx  index.tsx  list.tsx
frontend/src/features/boards/editor/: index.tsx  topmenu.tsx
frontend/src/features/layout/appbar/: index.tsx
frontend/src/features/layout/landingpage/: index.tsx
frontend/src/functions/: accounts.ts  api.ts  auth.ts  boards.ts  index.ts  items.ts
sql_scripts/: basicinfo.sql  cleartables.sql
