[project]
name = "bulletinator"
version = "0.1.0"
description = "A bulletin board app where users can easily plan and brainstorm project ideas."
authors = [
    {name = "Sam Hill",email = "sam@bulletinator.com"}
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "uuid7 (>=0.1.0,<0.2.0)",
    "stripe (>=12.1.0,<13.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
